--- a/index.html
+++ b/index.html
@@ -518,5 +518,6 @@
     function scrollRight() {
       scrollContainer.scrollBy({ left: 300, behavior: 'smooth' });
     }
+  </script>
 </body>
 </html>
