--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewpoint" content="width=1024"
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>India Palace</title>
@@ -12,7 +13,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <style>
-    body {
+    body
+    {
+      width: 1024px;
+      margin: 0 auto;
+      overflow-x: auto;
+    }
+    {
       margin: 0;
       font-family: 'Roboto', sans-serif;
       background-color: black;
