--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewpoint" content="width=1024"
+  <meta name="viewpoint" content="width=1280">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>India Palace</title>
@@ -15,9 +15,12 @@
   <style>
     body
     {
-      width: 1024px;
+      width: 1280px;
       margin: 0 auto;
       overflow-x: auto;
+    }
+    .container {
+      width: 1280;
     }
     {
       margin: 0;
