--- a/index.html
+++ b/index.html
@@ -766,7 +766,102 @@
   </div>
   </section>
 
-  
+   
+<!-- About Us Section: White title, yellow subtitle, good spacing, right photo full height, photo hugs right edge, left fade, perfect layout -->
+<section id="about-us" style="width:1100px;min-width:1100px;max-width:1100px;margin:100px auto 0 auto;position:relative;">
+  <!-- Centered Title Over Whole Section -->
+  <h2 style="
+    font-family:'Righteous',cursive;
+    font-size:38px;
+    color:#fff;
+    letter-spacing:1px;
+    text-align:center;
+    margin:0 auto 18px auto;
+    width:100%;
+    ">
+    About Us
+  </h2>
+  <!-- Subtitle below the title (yellow, spaced) -->
+  <div style="
+    text-align:center;
+    width:100%;
+    font-size:15px;
+    color:#ffd700;
+    font-family:'Roboto',sans-serif;
+    font-weight:500;
+    margin-bottom:38px;
+    ">
+    At INDIA PALACE Indian Restaurant, we believe that food is a celebration of life and that traditional foods are an enduring part of our culture.
+  </div>
+  <!-- Content Row: Text | Image -->
+  <div style="display:flex;flex-direction:row;align-items:stretch;height:420px;gap:0;">
+    <!-- Left: Text -->
+    <div style="
+      flex:1 1 0;
+      max-width:690px;
+      min-width:0;
+      background:#000;
+      border-radius:20px 0 0 20px;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      height:100%;
+      ">
+      <div style="
+        font-size:15px;
+        line-height:1.6;
+        color:#fff;
+        font-family:'Roboto',sans-serif;
+        white-space:pre-line;
+        padding:0 36px 0 36px;
+        text-align:left;
+        width:100%;
+        ">
+We offer our guests a unique and truly authentic Indian dining experience.
+
+Every dish at India palace features its own distinct flavor and personality and is made from the freshest ingredients. Our entrees include a unique blend of spices that are full of flavor, yet mild enough for children to enjoy.
+
+For those who have never eaten Indian food, we make the experience an easy one. Every dish on the menu is described in detail, with some dishes even offering an explanation of how the food will be prepared. You’ll have fun sampling a variety of dishes and may find a few new favorites. Whether it be a first date, a family outing or a large dinner party, regardless of the occasion, you can always expect a great atmosphere with great food at our India palace restaurant.
+
+Looking forward to serving  you!
+
+Thank you !
+      </div>
+    </div>
+    <!-- Right: Image hugs right edge, full height, left fades into black -->
+    <div style="
+      flex:0 0 410px;
+      max-width:410px;
+      min-width:0;
+      position:relative;
+      display:flex;
+      align-items:center;
+      justify-content:flex-end;
+      overflow:hidden;
+      height:100%;
+      border-radius:0 20px 20px 0;
+      ">
+      <img
+        src="https://cdn.pixabay.com/photo/2024/08/01/19/25/ai-generated-8938045_1280.jpg"
+        alt="India Palace Restaurant Interior"
+        style="
+          width:410px;
+          height:420px;
+          object-fit:cover;
+          display:block;
+          border-radius:0 20px 20px 0;
+          /* fade left side into black background */
+          -webkit-mask-image: linear-gradient(to right, transparent 0%, black 15%, black 100%);
+          mask-image: linear-gradient(to right, transparent 0%, black 15%, black 100%);
+          background:#000;
+        "
+      >
+    </div>
+  </div>
+  <!-- Extra space after section -->
+  <div style="height:48px;"></div>
+</section>
 
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
