--- a/index.html
+++ b/index.html
@@ -426,7 +426,27 @@
       font-size:21px;
       font-weight:bold;
     }
-    /* Hide arrows on mobile for space */
+
+    .yellow-btn {
+  background: #ffd700;
+  color: #111 !important;
+  border: none;
+  border-radius: 22px;
+  font-weight: 600;
+  font-size: 15.5px;
+  text-transform: none;
+  box-shadow: 0 2px 10px 0 rgba(255,215,0,0.13);
+  cursor: pointer;
+  outline: none;
+  transition: background 0.18s, color 0.18s, box-shadow 0.18s, transform 0.18s;
+}
+.yellow-btn:hover,
+.yellow-btn:focus {
+  background: #e6c200;
+  color: #111 !important;
+  box-shadow: 0 6px 18px rgba(255,215,0,0.25);
+  transform: scale(1.05);
+}
  
   </style>
 </head>
@@ -862,6 +882,91 @@ Thank you !
   <!-- Extra space after section -->
   <div style="height:48px;"></div>
 </section>
+
+
+  <!-- Reservations Section: Black background, left photo with fade, right dynamic content, yellow button with black text and hover, extra space before section -->
+
+<!-- Extra space before the section -->
+<div style="height:70px;"></div>
+
+<section id="reservations" style="width:1100px;min-width:1100px;max-width:1100px;margin:0 auto 100px auto;position:relative;">
+  <div style="display:flex;flex-direction:row;align-items:stretch;height:370px;">
+    <!-- Left: Photo -->
+    <div style="
+      flex:0 0 420px;
+      max-width:420px;
+      min-width:0;
+      position:relative;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;
+      height:100%;
+      border-radius:20px 0 0 20px;
+      ">
+      <img
+        src="https://cdn.pixabay.com/photo/2024/08/01/19/25/ai-generated-8938045_1280.jpg"
+        alt="Reservations Table"
+        style="
+          width:100%;
+          height:100%;
+          object-fit:cover;
+          display:block;
+          border-radius:20px 0 0 20px;
+          /* Fade right side into black background */
+          -webkit-mask-image: linear-gradient(to left, transparent 0%, black 18%, black 100%);
+          mask-image: linear-gradient(to left, transparent 0%, black 18%, black 100%);
+          background:#000;
+        "
+      >
+    </div>
+    <!-- Right: Text -->
+    <div style="
+      flex:1 1 0;
+      min-width:0;
+      background:#000;
+      border-radius:0 20px 20px 0;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:flex-start;
+      height:100%;
+      padding:0 42px 0 42px;
+      box-sizing:border-box;
+      ">
+      <div>
+        <div style="font-family:'Righteous',cursive;font-size:30px;color:#fff;margin-bottom:10px;letter-spacing:1px;">📅 Reservations</div>
+        <div style="font-size:21px;font-family:'Roboto',sans-serif;font-weight:600;margin-bottom:26px;color:#ffd700;">
+          Reserve Your Table Today
+        </div>
+        <div style="font-size:15.5px;color:#ccc;font-family:'Roboto',sans-serif;line-height:1.7;margin-bottom:24px;">
+          Planning a dinner out or a celebration? <b>Book a table</b> with us online or call us directly.<br>
+        </div>
+        <ul style="list-style:none;padding:0 0 0 0;margin:0 0 26px 0;">
+          <li style="font-size:16.5px;margin-bottom:10px;display:flex;align-items:center;gap:9px;">
+            <span style="font-size:20px;">📞</span>
+            <a href="tel:+1234567890" style="color:#ffd700;text-decoration:none;font-weight:bold;">[Phone Number]</a>
+          </li>
+          <li style="font-size:16.5px;margin-bottom:10px;display:flex;align-items:center;gap:9px;">
+            <span style="font-size:20px;">🕒</span>
+            <span style="color:#fff;">Open Daily: <b>11 AM – 10 PM</b></span>
+          </li>
+          <li style="font-size:16.5px;display:flex;align-items:center;gap:9px;">
+            <span style="font-size:20px;">🎉</span>
+            <span style="color:#fff;">Hosting a party? <span style="color:#ffd700;font-weight:bold;">Ask about private dining</span>.</span>
+          </li>
+        </ul>
+        <!-- Yellow Reservation Button with black text and hover style -->
+        <a href="#"
+           class="yellow-btn"
+           style="display:inline-block;padding:12px 34px;background:#ffd700;color:#111;border-radius:22px;font-size:15.5px;font-family:'Roboto',sans-serif;font-weight:600;text-decoration:none;box-shadow:0 2px 10px 0 rgba(255,215,0,0.13);transition:background 0.18s, color 0.18s, box-shadow 0.18s;">
+          Reserve Online
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
